// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRespondersPopup if a team is selected it shows an info alert 1`] = `
<div>
  <div
    class="add-responders-dropdown"
  >
    <div
      class="css-11uftlx-input-wrapper responders-filters"
      data-testid="input-wrapper"
    >
      <div
        class="css-1w5c5dq-input-inputWrapper"
      >
        <input
          class="css-1mlczho-input-input"
          data-testid="add-responders-search-input"
          placeholder="Search"
          style="padding-right: 12px;"
          value=""
        />
        <div
          class="css-7y3u6k-input-suffix"
        >
          <div
            class="css-wf08df-Icon"
          >
            <svg
              class="css-eyx4do"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.71,20.29,18,16.61A9,9,0,1,0,16.61,18l3.68,3.68a1,1,0,0,0,1.42,0A1,1,0,0,0,21.71,20.29ZM11,18a7,7,0,1,1,7-7A7,7,0,0,1,11,18Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="radio-buttons css-sv3u8u"
    >
      <input
        checked=""
        class="css-8hl977"
        id="option-teams-radiogroup-2"
        name="radiogroup-2"
        type="radio"
      />
      <label
        class="css-1tpfx0m"
        for="option-teams-radiogroup-2"
      >
        Teams
         
      </label>
      <input
        class="css-8hl977"
        id="option-users-radiogroup-2"
        name="radiogroup-2"
        type="radio"
      />
      <label
        class="css-1tpfx0m"
        for="option-users-radiogroup-2"
      >
        Users
         
      </label>
    </div>
    <div
      aria-label="You can add only one team per escalation. Please remove the existing team before adding a new one."
      class="css-j2xd7x"
      data-testid="data-testid Alert info"
      role="status"
    >
      <div
        class="css-38nxtd"
      >
        <div
          class="css-wf08df-Icon"
        >
          <svg
            class="css-eyx4do"
            data-name="Layer 1"
            height="24"
            id="Layer_1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,2A10,10,0,1,0,22,12,10.01114,10.01114,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.00917,8.00917,0,0,1,12,20Zm0-8.5a1,1,0,0,0-1,1v3a1,1,0,0,0,2,0v-3A1,1,0,0,0,12,11.5Zm0-4a1.25,1.25,0,1,0,1.25,1.25A1.25,1.25,0,0,0,12,7.5Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-zmuccj"
      >
        <div
          class="css-hui7p1"
        >
          You can add only one team per escalation. Please remove the existing team before adding a new one.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRespondersPopup it renders teams properly 1`] = `
<div>
  <div
    class="add-responders-dropdown"
  >
    <div
      class="css-11uftlx-input-wrapper responders-filters"
      data-testid="input-wrapper"
    >
      <div
        class="css-1w5c5dq-input-inputWrapper"
      >
        <input
          class="css-1mlczho-input-input"
          data-testid="add-responders-search-input"
          placeholder="Search"
          style="padding-right: 12px;"
          value=""
        />
        <div
          class="css-7y3u6k-input-suffix"
        >
          <div
            class="css-wf08df-Icon"
          >
            <svg
              class="css-eyx4do"
              height="16"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.71,20.29,18,16.61A9,9,0,1,0,16.61,18l3.68,3.68a1,1,0,0,0,1.42,0A1,1,0,0,0,21.71,20.29ZM11,18a7,7,0,1,1,7-7A7,7,0,0,1,11,18Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="radio-buttons css-sv3u8u"
    >
      <input
        checked=""
        class="css-8hl977"
        id="option-teams-radiogroup-1"
        name="radiogroup-1"
        type="radio"
      />
      <label
        class="css-1tpfx0m"
        for="option-teams-radiogroup-1"
      >
        Teams
         
      </label>
      <input
        class="css-8hl977"
        id="option-users-radiogroup-1"
        name="radiogroup-1"
        type="radio"
      />
      <label
        class="css-1tpfx0m"
        for="option-users-radiogroup-1"
      >
        Users
         
      </label>
    </div>
    <div
      aria-label="[object Object]"
      class="css-j2xd7x team-direct-paging-info-alert"
      data-testid="data-testid Alert info"
      role="status"
    >
      <div
        class="css-38nxtd"
      >
        <div
          class="css-wf08df-Icon"
        >
          <svg
            class="css-eyx4do"
            data-name="Layer 1"
            height="24"
            id="Layer_1"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,2A10,10,0,1,0,22,12,10.01114,10.01114,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.00917,8.00917,0,0,1,12,20Zm0-8.5a1,1,0,0,0-1,1v3a1,1,0,0,0,2,0v-3A1,1,0,0,0,12,11.5Zm0-4a1.25,1.25,0,1,0,1.25,1.25A1.25,1.25,0,0,0,12,7.5Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="css-zmuccj"
      >
        <div
          class="css-hui7p1"
        >
          <span
            class="root text text--primary text--medium"
          >
            You can only page teams which have a Direct Paging integration that is configured.
             
            <a
              class="learn-more-link"
              href="https://grafana.com/docs/oncall/latest/integrations/manual/#set-up-direct-paging-for-a-team"
              rel="noreferrer"
              target="_blank"
            >
              <span
                class="root text text--link text--medium"
              >
                <div
                  class="css-ve64a7-horizontal-group"
                  style="width: 100%; height: 100%;"
                >
                  <div
                    class="css-12pko5d-layoutChildrenWrapper"
                  >
                    Learn more
                  </div>
                  <div
                    class="css-12pko5d-layoutChildrenWrapper"
                  >
                    <div
                      class="css-wf08df-Icon"
                    >
                      <svg
                        class="css-eyx4do"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M18,10.82a1,1,0,0,0-1,1V19a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V8A1,1,0,0,1,5,7h7.18a1,1,0,0,0,0-2H5A3,3,0,0,0,2,8V19a3,3,0,0,0,3,3H16a3,3,0,0,0,3-3V11.82A1,1,0,0,0,18,10.82Zm3.92-8.2a1,1,0,0,0-.54-.54A1,1,0,0,0,21,2H15a1,1,0,0,0,0,2h3.59L8.29,14.29a1,1,0,0,0,0,1.42,1,1,0,0,0,1.42,0L20,5.41V9a1,1,0,0,0,2,0V3A1,1,0,0,0,21.92,2.62Z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </span>
            </a>
          </span>
        </div>
      </div>
    </div>
    <div
      class="root"
      data-testid="test__gTable"
    >
      <div
        class="rc-table filter-table table"
      >
        <div
          class="rc-table-container"
        >
          <div
            class="rc-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup>
                <col
                  style="width: 300px;"
                />
              </colgroup>
              <tbody
                class="rc-table-tbody"
              >
                <tr
                  class="rc-table-row rc-table-row-level-0"
                >
                  <td
                    class="rc-table-cell"
                  >
                    <div
                      class="responder-item"
                    >
                      <div
                        class="css-on8nbh-horizontal-group"
                        style="width: 100%; height: 100%;"
                      >
                        <div
                          class="css-cvef6c-layoutChildrenWrapper"
                        >
                          <div
                            class="css-ve64a7-horizontal-group"
                            style="width: 100%; height: 100%;"
                          >
                            <div
                              class="css-cvef6c-layoutChildrenWrapper"
                            >
                              <img
                                class="root avatarSize-small"
                                data-testid="test__avatar"
                                src="https://example.com"
                              />
                            </div>
                            <div
                              class="css-cvef6c-layoutChildrenWrapper"
                            >
                              <span
                                class="root text text--undefined text--medium"
                              >
                                my test team
                              </span>
                            </div>
                          </div>
                        </div>
                        <div
                          class="css-cvef6c-layoutChildrenWrapper"
                        >
                          <span
                            class="root text text--secondary text--medium"
                          >
                            1
                             user
                            
                             on-call
                          </span>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr
                  class="rc-table-row rc-table-row-level-0"
                >
                  <td
                    class="rc-table-cell"
                  >
                    <div
                      class="responder-item"
                    >
                      <div
                        class="css-on8nbh-horizontal-group"
                        style="width: 100%; height: 100%;"
                      >
                        <div
                          class="css-cvef6c-layoutChildrenWrapper"
                        >
                          <div
                            class="css-ve64a7-horizontal-group"
                            style="width: 100%; height: 100%;"
                          >
                            <div
                              class="css-cvef6c-layoutChildrenWrapper"
                            >
                              <img
                                class="root avatarSize-small"
                                data-testid="test__avatar"
                                src="https://example.com"
                              />
                            </div>
                            <div
                              class="css-cvef6c-layoutChildrenWrapper"
                            >
                              <span
                                class="root text text--undefined text--medium"
                              >
                                my test team 2
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
